-------------------------------------------------------------------------
Changes after 2.6.11:

- General
  - Save/Restore bugfixes
  - Removed legacy "load32bitOShack" feature.
  - Removed "svga" display library designed for the obsolete Linux SVGALib.

- CPU/CPUDB
  - Bugfixes for CPU emulation correctness (CPUID/VMX initialization fixes to support Windows Hyper-V as guest in Bochs)

- Bochs Debugger and Instrumentation
  - Add more symbol lookups to disasm methods

- I/O Devices
  - Networking
    - Added "multiple NICs" support to the NE2000 and E1000 devices. Up to 4 devices
      per model are supported. Use the zero-based "card" parameter to specify device.
    - Added experimental FTP service for networking modules 'vnet' and 'socket'.
    - Fixes for iPXE network boot support (modules 'slirp', 'socket', 'vnet').
    - Added config file support for the 'vnet' module (similar to 'slirp').
    - Added log file support to 'bxhub' utility (networking module 'socket').
    - Packet logging in text format for the 'slirp' and 'vnet' modules controlled
      by runtime option ("pktlog" option in config).
  - VGA
    - Voodoo (all models): Now using CLUT for gamma correction in 16 bpp modes.
    - Voodoo2: Added most of the bitblt capabilities.
    - Voodoo Banshee: Added "Polygon Fill" command and 2D colorkey support.
    - Removed lfb_enabled switch from Bochs VBE code. Now banked and LFB writes
      to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
    - DDC: Added "ddc" parameter to the "vga" option to make it possible
      either to disable the DDC feature or to read the monitor EDID from file.
  - Sound
    - Added PC speaker volume control for the lowlevel sound support.

- GUI and display libraries
    - Added support for calling a headerbar handler after pressing F7 (enabled
      with "cmdmode" option / present in sdl, sdl2, win32 and x).
    - Added support for saving text mode snapshot in BMP format.