@@ -9,6 +9,9 @@ Changes after 2.6.11:
 - CPU/CPUDB
   - Bugfixes for CPU emulation correctness (CPUID/VMX initialization fixes to support Windows Hyper-V as guest in Bochs)
 
+- Memory
+  - Improved BIOS write support by implementing Intel(tm) flash chip emulation.
+
 - Bochs Debugger and Instrumentation
   - Add more symbol lookups to disasm methods
 
@@ -30,6 +33,9 @@ Changes after 2.6.11:
       to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
     - DDC: Added "ddc" parameter to the "vga" option to make it possible
       either to disable the DDC feature or to read the monitor EDID from file.
+  - PCI (general)
+    - Added config parameter to set up advanced PCI options. Now it is possible
+      to disable ACPI or HPET in case the i440FX chipset is selected.
   - Sound
     - Added PC speaker volume control for the lowlevel sound support.
 
